[gd_scene load_steps=6 format=3 uid="uid://vywq307bhp1a"]

[ext_resource type="Script" uid="uid://dqfu5ldwhfmmt" path="res://input_form.gd" id="1_apm5s"]
[ext_resource type="Texture2D" uid="uid://br8vy6clmq707" path="res://image/nachlinks.png" id="2_s16wr"]
[ext_resource type="Texture2D" uid="uid://dngbjukhjb56f" path="res://image/nachrechts.png" id="3_jfoxt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k11kf"]
bg_color = Color(0.980392, 0.980392, 0.980392, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c2lfc"]
bg_color = Color(0.980392, 0.980392, 0.980392, 1)

[node name="InputForm" type="Node2D"]
script = ExtResource("1_apm5s")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_direction = 2
offset_left = 24.0
offset_top = 912.0
offset_right = 976.0
offset_bottom = 958.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 7.0
alignment = 1
metadata/_edit_group_ = true

[node name="Zurueck" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_k11kf")
text = "
"
icon = ExtResource("2_s16wr")
metadata/_edit_group_ = true

[node name="Neu" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Neu
"
metadata/_edit_group_ = true

[node name="Speichern" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Speichern"
metadata/_edit_group_ = true

[node name="Loeschen" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "LÃ¶schen
"
metadata/_edit_group_ = true

[node name="Vorwaerts" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_c2lfc")
text = "

"
icon = ExtResource("3_jfoxt")
icon_alignment = 2
metadata/_edit_group_ = true

[connection signal="pressed" from="HBoxContainer/Zurueck" to="." method="_on_back_pressed"]
[connection signal="pressed" from="HBoxContainer/Neu" to="." method="_on_new_pressed"]
[connection signal="pressed" from="HBoxContainer/Speichern" to="." method="_on_save_pressed"]
[connection signal="pressed" from="HBoxContainer/Loeschen" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="HBoxContainer/Vorwaerts" to="." method="_on_forward_pressed"]
